add label required asterisk

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -88,3 +88,9 @@ form {
 .bold {
     font-weight: bold;
 }
+
+.required-label::after { 
+    content:"*";
+    color:red;
+    margin-left: 2px;
+ }
