add person model and add admin persons page

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -115,3 +115,9 @@ form {
     color:red;
     margin-left: 2px;
  }
+ 
+.table td.fit, 
+.table th.fit {
+    white-space: nowrap;
+    width: 1%;
+}
