creating and editing a course now works

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -124,6 +124,10 @@ form {
     width: 50px;
 }
 
+.number-input {
+    width: 150px;
+}
+
 .table td.fit,
 .table th.fit {
     white-space: nowrap;
