--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,6 +6,7 @@ html, body {
 
 html {
     display: table;
+    /* TODO: push content to the left side if bootstrap Modal window is opened */
     margin: auto;
 }
 
@@ -120,3 +121,16 @@ form {
     white-space: nowrap;
     width: 1%;
 }
+
+.form-hidden {
+    padding: 0;
+    margin: 0;
+}
+
+/* unset bs3 setting */
+/* TODO */
+/* body.modal-open {
+    width: 100% !important;
+    padding-right: 0 !important;
+    overflow-y: scroll !important;
+} */
