add activation page

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -71,6 +71,17 @@ form {
     margin-bottom: 0;
 }
 
+.activation-card {
+    height: 100%;
+    display: table;
+}
+
+.activation-card {
+    display: table-cell;
+    vertical-align: table;
+    width: 500px;
+}
+
 .login-card-container {
     height: 100%;
     display: table;
