--- a/public/css/main.css
+++ b/public/css/main.css
@@ -155,6 +155,31 @@ form {
     padding: 0;
 }
 
+.toast {
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+    z-index: 10;
+}
+
+.toast-body {
+    font-size: 16px;
+}
+
+.toast-buttons {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.toast-buttons button {
+    margin-left: 10px;
+    line-height: 16px;
+}
+
+.btn-link {
+    padding: 0;
+}
+
 /* unset bs3 setting */
 /* TODO */
 /* body.modal-open {
